--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: test-express
   description: Component with GitHub actions enabled.
   annotations:
-    github.com/project-slug: 'RoadieHQ/sample-service'
+    github.com/project-slug: 'laurin-notemann/backstage'
 spec:
   type: service
   lifecycle: production
